examples/test/testpolicy9733.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9733
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key15: value19
      key14: value40
      key18: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value38
          key27: value17
          key14: value39
      podSelector:
        matchLabels:
          key32: value40
